@@ -67,12 +67,14 @@ android {
 
     dependencies {
         testImplementation("org.jetbrains.kotlin:kotlin-test")
+        testImplementation("org.json:json:20240303")
         testImplementation("org.mockito:mockito-core:5.0.0")
     }
 
     testOptions {
         unitTests.all {
             useJUnitPlatform()
+            jvmArgs "-Dnet.bytebuddy.experimental=true"
 
             testLogging {
                events "passed", "skipped", "failed", "standardOut", "standardError"
